# bioplausible

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT_STEPS.md  PACKAGE_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  TODO.md  UX_FLOWS.md  debug_output.txt  final_test_report.txt  flake8_report.txt  gui.sh  launch_evaluation.sh  launch_leaderboard.py  launch_studio.py  pyproject.toml  requirements.txt  run_leaderboard.sh  test_report.txt  verify.py  verify_dashboard_imports.py  verify_final.py  verify_output.txt  verify_output_2.txt
bioplausible/: ARCHITECTURE.md  README.md  __init__.py  acceleration.py  analysis.py  bioplausible.py  cli.py  config.py  core.py  datasets.py  export.py  generation.py  kernel.py  lm_models.py  models.py  sklearn.py  sklearn_interface.py  tracking.py  utils.py  verify.py
bioplausible_ui/: README.md  __main__.py  common_widgets.py  config.py  dashboard.py  dashboard_helpers.py  generation.py  hyperopt_dashboard.py  hyperopt_worker.py  hyperparams.py  leaderboard_app.html  leaderboard_data.py  leaderboard_insights.py  leaderboard_server.py  leaderboard_widgets.py  leaderboard_window.py  main.py  refactored_dashboard.py  refactored_vision_tab.py  refactored_worker.py  studio.py  studio_sidebar.py  themes.py  training_utils.py  viz_utils.py  worker.py
bioplausible_ui_old/: __init__.py  dashboard.py  experiment_scheduler.py  hyperopt_app.py  hyperopt_dashboard.py  hyperopt_worker.py  hyperparams.py  logging_utils.py  main.py  refactored_dashboard.py  refactored_vision_tab.py  themes.py  utils.py  (+1 more)
(+353 files in other folders)
